# sparkengine

./: .clang-format  .gitignore  BuildDesktop.bat  BuildHTML5.bat  CMakeLists.txt  SConstruct  imgui.ini
buildsystem/: methods.py  targetrules.py
sbs/: targetrules.py
src/: CMakeLists.txt  SCsub
src/modules/: CMakeLists.txt
src/modules/mylib/: CMakeLists.txt  SCsub
src/modules/mylib/Source/Private/: MyLib.cpp
src/modules/mylib/Source/Public/: MyLib.h
src/modules/objcTest/: CMakeLists.txt
src/modules/objcTest/Source/Private/: MyLib.mm
src/modules/objcTest/Source/Public/: MyLib.h
src/modules/sandbox/: CMakeLists.txt  SCsub  SCsubb
src/modules/sandbox/Source/Private/: LayerTest.cpp  LayerTest2D.cpp  Sandbox.cpp
src/modules/sandbox/Source/Public/: LayerTest.h  LayerTest2D.h  Sandbox.h
src/modules/sparkeditor/: CMakeLists.txt
src/modules/sparkeditor/Source/Private/: SelectionManager.cpp  SparkEditor.cpp  SparkEditorLayer.cpp
src/modules/sparkeditor/Source/Public/: SelectionManager.h  SparkEditor.h  SparkEditorLayer.h
src/modules/sparkeditor/Source/Public/EditField/: DefaultEditField.h  TransformEditField.h
src/modules/sparkeditor/Source/Public/Panels/: DetailsPanel.h  WorldOutlinePanel.h
src/modules/sparkengine/: CMakeLists.txt  SCsub  SCsubb
src/modules/sparkengine/Source/Private/Platform/: WindowsPlatformWindow.cpp
src/modules/sparkengine/Source/Private/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h  OpenGLPlatformRendererAPI.cpp  OpenGLPlatformRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/modules/sparkengine/Source/Private/Platform/Windows/: WindowsPlatform.cpp  WindowsPlatform.h  WindowsPlatformWindow.cpp  WindowsPlatformWindow.h
src/modules/sparkengine/Source/Private/Spark/: Application.cpp  LayerStack.cpp  Log.cpp
src/modules/sparkengine/Source/Private/Spark/Core/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Platform.cpp  Profiling.cpp  Reflection.cpp
src/modules/sparkengine/Source/Private/Spark/Core/Misc/: Paths.cpp
src/modules/sparkengine/Source/Private/Spark/Engine/: Level.cpp  World.cpp
src/modules/sparkengine/Source/Private/Spark/Engine/Camera/: Camera.cpp  CameraComponent.cpp
src/modules/sparkengine/Source/Private/Spark/Engine/GameFramework/: Actor.cpp  Enitty.cpp  Entity.cpp
src/modules/sparkengine/Source/Private/Spark/Engine/Mesh/: MeshComponent.cpp  MeshUtils.cpp
src/modules/sparkengine/Source/Private/Spark/Engine/Object/: Object.cpp
src/modules/sparkengine/Source/Private/Spark/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
src/modules/sparkengine/Source/Private/Spark/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxPlatform.cpp  LinuxPlatform.h  LinuxPlatformFile.cpp  LinuxPlatformFile.h  LinuxPlatformWindow.cpp  LinuxPlatformWindow.h
src/modules/sparkengine/Source/Private/Spark/Mac/: MacInput.cpp  MacInput.h  MacPlatform.cpp  MacPlatform.h  MacPlatformFile.cpp  MacPlatformFile.h  MacPlatformWindow.cpp  MacPlatformWindow.h
src/modules/sparkengine/Source/Private/Spark/Metal/: MetalBuffer.h  MetalBuffer.mm  MetalFramebuffer.h  MetalFramebuffer.mm  MetalGraphicsContext.h  MetalGraphicsContext.mm  MetalImGuiLayer.h  MetalImGuiLayer.mm  MetalPlatformRendererAPI.h  MetalPlatformRendererAPI.mm  MetalShader.h  MetalShader.mm  MetalTexture2D.h  MetalTexture2D.mm  MetalVertexArray.h  MetalVertexArray.mm
src/modules/sparkengine/Source/Private/Spark/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLGraphicsContext.cpp  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.h  OpenGLPlatformRendererAPI.cpp  OpenGLPlatformRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.h
src/modules/sparkengine/Source/Private/Spark/Renderer/: Framebuffer.cpp  IBuffer.cpp  IShader.cpp  IVertexArray.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  PlatformRendererAPI.cpp  RenderCommand.cpp  RenderPass.cpp  Renderer.cpp  Renderer2D.cpp  Texture.cpp
src/modules/sparkengine/Source/Private/Spark/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatform.cpp  WindowsPlatformFile.cpp  WindowsPlatformFile.h  WindowsPlatformWindow.cpp  WindowsPlatformWindow.h
src/modules/sparkengine/Source/Public/: Spark.h  sparkengine.PCH.h
src/modules/sparkengine/Source/Public/Spark/: Application.h  CoreTypes.h  EntryPoint.h  Input.h  Layer.h  LayerStack.h  Log.h  MouseButtonCodes.h  PlatformWindow.h
src/modules/sparkengine/Source/Public/Spark/Core/: Application.h  CoreTypes.h  Delegate.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  Platform.h  PlatformWindow.h  Profiling.h  Reflection.h  Timestep.h
src/modules/sparkengine/Source/Public/Spark/Core/GenericPlatform/: GenericPlatformFile.h
src/modules/sparkengine/Source/Public/Spark/Core/Misc/: Paths.h
src/modules/sparkengine/Source/Public/Spark/Engine/: Level.h  World.h
src/modules/sparkengine/Source/Public/Spark/Engine/Camera/: Camera.h  CameraComponent.h
src/modules/sparkengine/Source/Public/Spark/Engine/Components/: ActorComponent.h  Component.h  SceneComponent.h
src/modules/sparkengine/Source/Public/Spark/Engine/GameFramework/: Actor.h  Entity.h  EntityComponentManager.h
src/modules/sparkengine/Source/Public/Spark/Engine/Mesh/: MeshComponent.h  MeshUtils.h
src/modules/sparkengine/Source/Public/Spark/Engine/Object/: Object.h
src/modules/sparkengine/Source/Public/Spark/Events/: ApplicationEvent.h  Event.h  KeyEvent.h
src/modules/sparkengine/Source/Public/Spark/GenericPlatform/: GenericPlatformFile.h
src/modules/sparkengine/Source/Public/Spark/ImGui/: ImGuiLayer.h
src/modules/sparkengine/Source/Public/Spark/Object/: Object.h
src/modules/sparkengine/Source/Public/Spark/Renderer/: Camera.h  Framebuffer.h  IBuffer.h  IGraphicsContext.h  IShader.h  IVertexArray.h  OrthographicCamera.h  PerspectiveCamera.h  PlatformRendererAPI.h  RenderCommand.h  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.h  Texture.h
(+39 files in other folders)
